# mcp-http-template

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt
deployment/: README.md
deployment/helm/mcp-server/: Chart.yaml  values.yaml
deployment/helm/mcp-server/templates/: configmap.yaml  deployment.yaml  ingress.yaml  networkpolicy.yaml  service.yaml
deployment/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  service.yaml
deployment/scripts/: deploy.sh
mcp_server/: __init__.py  config.py  main.py
tests/: __init__.py  test_server.py
